# configuration

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: documentation.yml
configuration/: config.py  registry.py  typing.py
docs/: index.md
search/: search_index.json
tests/: conftest.py  test_config.py  test_registry.py
