[tool.poetry]
name = "configuration"
version = "0.0.0"
description = "A package for handling configuration."
authors = ["Basile Dura <basile@bdura.me>"]

[tool.poetry.dependencies]
python = "^3.9"
thinc = "^8.0.13"
catalogue = "^2.0.6"
mkdocs-bibtex = "^2.0.1"
mkdocs = "^1.2.3"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.2.3"
flake8 = "^4.0.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
