[tool.poetry]
name = "configuration"
version = "0.1.0"
description = "A package for handling configuration."
authors = ["Basile Dura <basile@bdura.me>"]

[tool.poetry.dependencies]
python = "^3.9"
catalogue = "^2.0.6"
pydantic = "^1.9.0"
wasabi = "^0.9.1"
srsly = "^2.4.3"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.2.3"
flake8 = "^4.0.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
ipykernel = "^6.13.0"
mkdocs-bibtex = "^2.0.1"
mkdocstrings = {extras = ["python"], version = "^0.18.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
